--- a/src/scss/_sprite.scss
+++ b/src/scss/_sprite.scss
@@ -9,11 +9,33 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$spritesheet-width: 0px;
-$spritesheet-height: 0px;
-$spritesheet-image: './img/sprite.png';
-$spritesheet-sprites: ();
-$spritesheet: (0px, 0px, './img/sprite.png', $spritesheet-sprites, );
+$iqlp-reborn01-bg-text-registration-bottom-min-name: 'iqlp_reborn01_bg_text_registration_bottom-min';
+$iqlp-reborn01-bg-text-registration-bottom-min-x: 0px;
+$iqlp-reborn01-bg-text-registration-bottom-min-y: 0px;
+$iqlp-reborn01-bg-text-registration-bottom-min-offset-x: 0px;
+$iqlp-reborn01-bg-text-registration-bottom-min-offset-y: 0px;
+$iqlp-reborn01-bg-text-registration-bottom-min-width: 640px;
+$iqlp-reborn01-bg-text-registration-bottom-min-height: 22px;
+$iqlp-reborn01-bg-text-registration-bottom-min-total-width: 640px;
+$iqlp-reborn01-bg-text-registration-bottom-min-total-height: 28px;
+$iqlp-reborn01-bg-text-registration-bottom-min-image: './img/i/sprite.png';
+$iqlp-reborn01-bg-text-registration-bottom-min: (0px, 0px, 0px, 0px, 640px, 22px, 640px, 28px, './img/i/sprite.png', 'iqlp_reborn01_bg_text_registration_bottom-min', );
+$iqlp-reborn01-bg-text-registration-middle-min-name: 'iqlp_reborn01_bg_text_registration_middle-min';
+$iqlp-reborn01-bg-text-registration-middle-min-x: 0px;
+$iqlp-reborn01-bg-text-registration-middle-min-y: 26px;
+$iqlp-reborn01-bg-text-registration-middle-min-offset-x: 0px;
+$iqlp-reborn01-bg-text-registration-middle-min-offset-y: -26px;
+$iqlp-reborn01-bg-text-registration-middle-min-width: 640px;
+$iqlp-reborn01-bg-text-registration-middle-min-height: 2px;
+$iqlp-reborn01-bg-text-registration-middle-min-total-width: 640px;
+$iqlp-reborn01-bg-text-registration-middle-min-total-height: 28px;
+$iqlp-reborn01-bg-text-registration-middle-min-image: './img/i/sprite.png';
+$iqlp-reborn01-bg-text-registration-middle-min: (0px, 26px, 0px, -26px, 640px, 2px, 640px, 28px, './img/i/sprite.png', 'iqlp_reborn01_bg_text_registration_middle-min', );
+$spritesheet-width: 640px;
+$spritesheet-height: 28px;
+$spritesheet-image: './img/i/sprite.png';
+$spritesheet-sprites: ($iqlp-reborn01-bg-text-registration-bottom-min, $iqlp-reborn01-bg-text-registration-middle-min, );
+$spritesheet: (640px, 28px, './img/i/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
