--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -1,4 +1,9 @@
-
+.c-btn-skip {
+    background: url('../img/btn-skip-min.png') no-repeat;
+    width: 235px;
+    height: 60px;
+    color: rgba($color: #000, $alpha: 0);
+}
 
 .c-footer {
     padding: 38px 30px 43px;
