--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -26,133 +26,5 @@
     @if $height == none {} @else if $height != false {height: $height;} @else if $bg-height != false {height: $background-image-height;}
 };
 
-//==========================================
-//
-// LP
-//
-//==========================================
-
-.page-lp-reborn01 {
-    img {
-        display: block;
-    }
-    .l-btn-registration {
-        width: responsiveX(140, 278);
-        display: block;
-        &:nth-of-type(1) {
-            margin-right: 10px;
-        }
-        img {
-            width: 100%;
-        }
-    }
-    .l-caption {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction:column;
-        margin-bottom: 15px;
-        padding: 10px 0;
-        background-color: #e92377;
-        color: #fff;
-        font-size: 1.5rem;
-        line-height: 1.4;
-        &__small {
-            font-size: 1rem;
-        }
-        &__em {
-            font-size: 2rem;
-        }
-    }
-    .block-registration {
-        &.is-capture {
-            &:before {
-                display: none;
-            }
-        }
-        &:before {
-            display: block;
-            content: "";
-            @include img-background(
-                $image: '../img/iqlp_reborn01_bg_text_registration_top-min.png',
-                $position: 50% 0,
-                $repeat: repeat-x,
-                $width: 100%,
-                $pixelRatio: 2,
-                $bg-width: 640px,
-                $bg-height: 22px
-            );
-        }
-        &__inner {
-            box-sizing: border-box;
-            @include img-background(
-                $image: '../img/iqlp_reborn01_bg_text_registration_middle-min.png',
-                $position: 0 0,
-                $repeat: repeat,
-                $width: 100%,
-                $height: auto,
-                $pixelRatio: 2
-            );
-            background-size: 100% auto;
-            padding: 10px 0;
-        }
-        &:after {
-            display: block;
-            content: "";
-            @include img-background(
-                $image: '../img/iqlp_reborn01_bg_text_registration_bottom-min.png',
-                $position: 50% 0,
-                $repeat: repeat-x,
-                $width: 100%,
-                $pixelRatio: 2,
-                $bg-width: 640px,
-                $bg-height: 22px
-            );
-        }
-    }
-    .l-em {
-        color: #fe0000;
-    }
-    .l-notice {
-        margin: 0 14px 24px;
-        li {
-            text-indent: -1.0rem;
-            padding: 0 0 3px 10px;
-            line-height: 1.4;
-            font-size: 1.0rem;
-            color: #545454;
-        }
-    }
-    .l-to-top {
-        @include img-background(
-            $image: '../img/iqlp_reborn01_btn_lp_to_top-min.png',
-            $position: 0 0,
-            $repeat: no-repeat,
-            $pixelRatio: 2,
-            $bg-width: 210px,
-            $bg-height: 64px
-        );
-        margin: 0 auto;
-        padding: 7px 0 0 30px;
-        box-sizing: border-box;
-        display: block;
-        color: #545454;
-    }
-    .c-footer {
-        margin-top: 50px;
-        padding: 38px 10px 43px;
-        background-color: #e4e4e4;
-        color: #545454;
-        &__link-children {
-            &:nth-child(1),
-            &:nth-child(2) {
-                border-right: #545454 solid 1px;
-            }
-        }
-        .c-text-link {
-            color: #545454;
-        }
-    }
-}
-
+@import "page";
 @import "helper";
