--- a/src/scss/_sprite.scss
+++ b/src/scss/_sprite.scss
@@ -18,8 +18,8 @@ $iqlp-reborn01-bg-text-registration-bottom-min-width: 640px;
 $iqlp-reborn01-bg-text-registration-bottom-min-height: 22px;
 $iqlp-reborn01-bg-text-registration-bottom-min-total-width: 640px;
 $iqlp-reborn01-bg-text-registration-bottom-min-total-height: 28px;
-$iqlp-reborn01-bg-text-registration-bottom-min-image: './img/i/sprite.png';
-$iqlp-reborn01-bg-text-registration-bottom-min: (0px, 0px, 0px, 0px, 640px, 22px, 640px, 28px, './img/i/sprite.png', 'iqlp_reborn01_bg_text_registration_bottom-min', );
+$iqlp-reborn01-bg-text-registration-bottom-min-image: '../../img/i/sprite-1978858923d05f958f30bcbe597c1820.png';
+$iqlp-reborn01-bg-text-registration-bottom-min: (0px, 0px, 0px, 0px, 640px, 22px, 640px, 28px, '../../img/i/sprite-1978858923d05f958f30bcbe597c1820.png', 'iqlp_reborn01_bg_text_registration_bottom-min', );
 $iqlp-reborn01-bg-text-registration-middle-min-name: 'iqlp_reborn01_bg_text_registration_middle-min';
 $iqlp-reborn01-bg-text-registration-middle-min-x: 0px;
 $iqlp-reborn01-bg-text-registration-middle-min-y: 26px;
@@ -29,13 +29,13 @@ $iqlp-reborn01-bg-text-registration-middle-min-width: 640px;
 $iqlp-reborn01-bg-text-registration-middle-min-height: 2px;
 $iqlp-reborn01-bg-text-registration-middle-min-total-width: 640px;
 $iqlp-reborn01-bg-text-registration-middle-min-total-height: 28px;
-$iqlp-reborn01-bg-text-registration-middle-min-image: './img/i/sprite.png';
-$iqlp-reborn01-bg-text-registration-middle-min: (0px, 26px, 0px, -26px, 640px, 2px, 640px, 28px, './img/i/sprite.png', 'iqlp_reborn01_bg_text_registration_middle-min', );
+$iqlp-reborn01-bg-text-registration-middle-min-image: '../../img/i/sprite-1978858923d05f958f30bcbe597c1820.png';
+$iqlp-reborn01-bg-text-registration-middle-min: (0px, 26px, 0px, -26px, 640px, 2px, 640px, 28px, '../../img/i/sprite-1978858923d05f958f30bcbe597c1820.png', 'iqlp_reborn01_bg_text_registration_middle-min', );
 $spritesheet-width: 640px;
 $spritesheet-height: 28px;
-$spritesheet-image: './img/i/sprite.png';
+$spritesheet-image: '../../img/i/sprite-1978858923d05f958f30bcbe597c1820.png';
 $spritesheet-sprites: ($iqlp-reborn01-bg-text-registration-bottom-min, $iqlp-reborn01-bg-text-registration-middle-min, );
-$spritesheet: (640px, 28px, './img/i/sprite.png', $spritesheet-sprites, );
+$spritesheet: (640px, 28px, '../../img/i/sprite-1978858923d05f958f30bcbe597c1820.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
