--- a/public/sema/css/lp.css
+++ b/public/sema/css/lp.css
@@ -373,7 +373,7 @@ a {
     bottom: 264px;
     left: 50%;
     margin-left: -118px; }
-  .page-result .title {
+  .page-result .result-title {
     background: url(../../img/i/text-result-min.png) no-repeat;
     width: 326px;
     height: 69px;
