--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -267,7 +267,7 @@
         left: 50%;
         margin-left: -118px;
     }
-    .title {
+    .result-title {
         background: url('../img/text-result-min.png') no-repeat;
         width: 326px;
         height: 69px;
